--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -3,5 +3,6 @@
      <div class="post-entry">
          <h2>{{post.title}}</h2>
          <p>{{post.body}}</p>
+         <a href="{% url 'post_edit' post.pk %}">+ Edit Blog Post </a>
      </div>
     {% endblock content %}
