--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -3,6 +3,8 @@
      <div class="post-entry">
          <h2>{{post.title}}</h2>
          <p>{{post.body}}</p>
-         <a href="{% url 'post_edit' post.pk %}">+ Edit Blog Post </a>
+         <p><a href="{% url 'post_edit' post.pk %}">+ Edit Blog Post </a></p>
+         <p><a href="{% url 'post_delete' post.pk %}">+ Delete Blog Post </a></p>
+
      </div>
     {% endblock content %}
