--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,14 @@
         </div>
 
     </header>
+    {% if user.is_authenticated %}
+        <p>Hi {{ user.username}}</p>
+        <a href="{% url 'logout' %}">Logout</a>
+
+    {% else %}
+        <p>You are not Logged in.</p>
+        <a href="{% url 'login' %}">Log in</a>
+    {% endif%}
     <div>
         {% block content %}
         {% endblock content %}
