added signup to login

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
     {% else %}
         <p>You are not Logged in.</p>
         <a href="{% url 'login' %}">Log in</a>
+        <a href="{% url 'signup' %}">Sign up</a>
     {% endif%}
     <div>
         {% block content %}
